--- a/uitest/build.xml
+++ b/uitest/build.xml
@@ -29,38 +29,7 @@
     </target>
 
     <!-- run both normal and server tests -->
-    <target name="test-all" depends="clean-testbench-errors">
-        <property name="war.file"
-            location="${vaadin.basedir}/uitest/target/vaadin-uitest-${vaadin.version}.war" />
-        <mkdir dir="${vaadin.basedir}/result" />
-        <parallel>
-            <daemons>
-                <ant antfile="${uitest.dir}/vaadin-server.xml"
-                    inheritall="true" inheritrefs="true" target="deploy-and-start" />
-            </daemons>
-            <sequential>
-                <ant antfile="${uitest.dir}/vaadin-server.xml"
-                    target="wait-for-startup" />
-                <ant antfile="${uitest.dir}/tb3test.xml" target="run-all-tb3-tests"
-                    inheritall="true" />
-                <!-- within sequential for now not to cause problems with result parsing in CI -->
-                <ant antfile="${uitest.dir}/integration_tests.xml"
-                    target="integration-test-all" inheritall="false"
-                    inheritrefs="false">
-                    <property name="demo.war" value="${war.file}" />
-                </ant>
-            </sequential>
-        </parallel>
-    </target>
-
-    <target name="test-server" depends="clean-testbench-errors">
-        <property name="war.file"
-            location="${vaadin.basedir}/uitest/target/vaadin-uitest-${vaadin.version}.war" />
-        <ant antfile="${uitest.dir}/integration_tests.xml"
-            target="integration-test-all" inheritall="false"
-            inheritrefs="false">
-            <property name="demo.war" value="${war.file}" />
-        </ant>
+    <target name="test-all" depends="test-tb3">
     </target>
 
     <target name="test-tb3" depends="clean-testbench-errors">
