Fix failsafe includes

--- a/uitest/pom.xml
+++ b/uitest/pom.xml
@@ -322,7 +322,9 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <configuration>
                     <skip>${skip.uitest.failsafe}</skip>
-                    <includes>**/AllTB3Tests.java</includes>
+                    <includes>
+                        <include>**/AllTB3Tests.java</include>
+                    </includes>
                 </configuration>
                 <executions>
                     <execution>
