Add a maven plugin for formatting according to Eclipse settings
Running formatter:format will format all files in a submodule using an
embedded Eclipse compiler (based on Neon SR1 in the used version)
according to the regular formatting settings file.

I've also formatted all (non-compatibility) sources using the plugin to
verify that the formatting is indeed consistent with the formatting
output of the Eclipse Neon SR2 that we're currently suggesting as the
default IDE. This uncovered an issue with dangling single-line comments
that I've resolved by manually moving such comments to their own lines
instead. The issue has also been reported to the plugin maintainer.

--- a/pom.xml
+++ b/pom.xml
@@ -486,6 +486,23 @@
 
         <plugins>
             <plugin>
+                <groupId>com.marvinformatics.formatter</groupId>
+                <artifactId>formatter-maven-plugin</artifactId>
+                <version>1.8.1</version>
+                <configuration>
+                    <configFile>classpath:/eclipse/VaadinJavaConventions.xml</configFile>
+                    <!-- Provide a dummy JS config file to avoid errors -->
+                    <configJsFile>classpath:/eclipse/VaadinJavaConventions.xml</configJsFile>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>${project.groupId}</groupId>
+                        <artifactId>vaadin-buildhelpers</artifactId>
+                        <version>${project.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>animal-sniffer-maven-plugin</artifactId>
                 <executions>
