--- a/uitest/pom.xml
+++ b/uitest/pom.xml
@@ -326,8 +326,17 @@
                         <include>**/AllTB3Tests.java</include>
                     </includes>
                     <systemPropertyVariables>
+                        <!-- Static path for screenshots pointing to submodule -->
                         <com.vaadin.testbench.screenshot.directory>${project.parent.basedir}/tests/screenshots</com.vaadin.testbench.screenshot.directory>
-                        <com.vaadin.testbench.max.retries>2</com.vaadin.testbench.max.retries>
+
+                        <!-- Optional properties for the test build -->
+                        <vaadin.testbench.developer.license>${vaadin.testbench.developer.license}</vaadin.testbench.developer.license>
+                        <com.vaadin.testbench.max.retries>${com.vaadin.testbench.max.retries}</com.vaadin.testbench.max.retries>
+                        <browsers.include>${browsers.include}</browsers.include>
+                        <browsers.exclude>${browsers.exclude}</browsers.exclude>
+                        <categories.include>${categories.include}</categories.include>
+                        <categories.exclude>${categories.exclude}</categories.exclude>
+                        <useLocalWebDriver>${useLocalWebDriver}</useLocalWebDriver>
                     </systemPropertyVariables>
                 </configuration>
                 <executions>
@@ -439,36 +448,7 @@
                 </plugins>
             </build>
         </profile>
-        <profile>
-            <id>validation</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <artifactId>maven-failsafe-plugin</artifactId>
-                            <configuration>
-                                <systemPropertyVariables>
-                                    <useLocalWebDriver>true</useLocalWebDriver>
-                                    <browsers.include>phantomjs1</browsers.include>
-                                    <categories.exclude>push,needs-ssh</categories.exclude>
-                                </systemPropertyVariables>
-                            </configuration>
-                            <executions>
-                                <execution>
-                                    <goals>
-                                        <goal>integration-test</goal>
-                                        <goal>verify</goal>
-                                    </goals>
-                                </execution>
-                            </executions>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
-            </build>
-        </profile>
+
     </profiles>
 
 </project>
