--- a/uitest/pom.xml
+++ b/uitest/pom.xml
@@ -27,6 +27,11 @@
         </repository>
     </repositories>
 
+    <prerequisites>
+        <!-- phantomjs-maven-plugin required maven 3.1 or newer -->
+        <maven>3.1</maven>
+    </prerequisites>
+
     <dependencies>
 
         <!-- API DEPENDENCIES -->
