--- a/test/servlet-containers/generic/build.xml
+++ b/test/servlet-containers/generic/build.xml
@@ -13,8 +13,9 @@
     <property name="result.dir" value="result" />
     <property name="result.war"
         location="${uitest.dir}/target/${module.name}-${vaadin.version}.war" />
+    <!--todo automate version number -->
     <property name="result.jboss6.war"
-        location="${uitest.dir}/target/${module.name}-${vaadin.version}-jboss6.war" />
+        location="${uitest.dir}/target/${module.name}-8.0-SNAPSHOT-jboss6.war" />
 
     <!-- Need to give a default value to keep Ivy happy -->
     <property name="vaadin.build.repository" value="http://maven.vaadin.com/vaadin-prereleases"/>
