--- a/test/servlet-containers/generic/pom.xml
+++ b/test/servlet-containers/generic/pom.xml
@@ -11,6 +11,9 @@
     <artifactId>vaadin-test-generic-integration</artifactId>
     <name>vaadin-test-generic-integration</name>
     <packaging>war</packaging>
+    <properties>
+        <osgi.bundle.version>8.0.0</osgi.bundle.version>
+    </properties>
 
     <dependencies>
 
@@ -27,10 +30,6 @@
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-push</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.vaadin</groupId>
-            <artifactId>vaadin-client-compiled</artifactId>
         </dependency>
         <dependency>
             <groupId>com.vaadin</groupId>
@@ -101,8 +100,8 @@
                         <Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
                         <Bundle-Name>${project.name}</Bundle-Name>
                         <Bundle-Version>${osgi.bundle.version}</Bundle-Version>
-                        <Import-Package>!com.vaadin.*,*</Import-Package>
-                        <Export-Package>false</Export-Package>
+                        <Import-Package>javax.servlet,javax.servlet.http,!com.vaadin.*,*</Import-Package>
+                        <Web-ContextPath>run</Web-ContextPath>
                     </instructions>
                     <supportedProjectTypes>
                         <supportedProjectType>war</supportedProjectType>
