--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 
         <!-- Dependency unpack directory -->
         <dependency.unpack.directory>${project.build.directory}/dependency-unpack</dependency.unpack.directory>
-        
+
         <jetty.version>9.3.7.v20160115</jetty.version>
         <phantomjs.version>2.1.1</phantomjs.version>
 
@@ -125,13 +125,13 @@
                 <artifactId>vaadin-sass-compiler</artifactId>
                 <version>${vaadin.sass.version}</version>
                 <exclusions>
-                <!-- No need to have the minifier included for development 
-                    mode on-the-fly compilation -->
-                <exclusion>
-                    <groupId>com.yahoo.platform.yui</groupId>
-                    <artifactId>yuicompressor</artifactId>
-                </exclusion>
-            </exclusions>
+                    <!-- No need to have the minifier included for development 
+                        mode on-the-fly compilation -->
+                    <exclusion>
+                        <groupId>com.yahoo.platform.yui</groupId>
+                        <artifactId>yuicompressor</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>com.carrotsearch</groupId>
@@ -169,10 +169,10 @@
                 <artifactId>junit</artifactId>
                 <version>4.12</version>
                 <exclusions>
-                   <exclusion>
-                       <artifactId>hamcrest-core</artifactId>
-                       <groupId>org.hamcrest</groupId>
-                   </exclusion>
+                    <exclusion>
+                        <artifactId>hamcrest-core</artifactId>
+                        <groupId>org.hamcrest</groupId>
+                    </exclusion>
                 </exclusions>
             </dependency>
             <dependency>
@@ -215,10 +215,10 @@
                 <artifactId>mockito-core</artifactId>
                 <version>1.9.5</version>
                 <exclusions>
-                   <exclusion>
-                      <artifactId>hamcrest-core</artifactId>
-                      <groupId>org.hamcrest</groupId>
-                  </exclusion>
+                    <exclusion>
+                        <artifactId>hamcrest-core</artifactId>
+                        <groupId>org.hamcrest</groupId>
+                    </exclusion>
                 </exclusions>
             </dependency>
             <dependency>
@@ -567,14 +567,10 @@
 
     <profiles>
         <profile>
-            <!--  Profile is triggered unless apiDiff property is defined:
-                  always except "apicmp" profile which is disjoint with this profile
-            !-->
+            <!-- Default build profile that runs all modules. -->
             <id>default</id>
             <activation>
-                <property>
-                    <name>!apiDiff</name>
-                </property>
+                <activeByDefault>true</activeByDefault>
             </activation>
             <modules>
                 <module>buildhelpers</module>
@@ -606,6 +602,13 @@
             </modules>
         </profile>
         <profile>
+            <id>release-assemblies</id>
+            <modules>
+                <module>liferay</module>
+                <module>all</module>
+            </modules>
+        </profile>
+        <profile>
             <id>release</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
@@ -613,6 +616,28 @@
             <properties>
                 <vaadin.plugin.version>${project.version}</vaadin.plugin.version>
             </properties>
+
+            <!-- Release build only builds artifacts that are deployed or 
+                needed by them -->
+            <modules>
+                <module>buildhelpers</module>
+                <module>shared</module>
+                <module>push</module>
+                <module>server</module>
+                <module>client</module>
+                <module>client-compiler</module>
+                <module>client-compiled</module>
+                <module>themes</module>
+                <module>compatibility-server</module>
+                <module>compatibility-client</module>
+                <module>compatibility-client-compiled</module>
+                <module>compatibility-shared</module>
+                <module>compatibility-themes</module>
+                <module>testbench-api</module>
+                <!-- Nexus staging bug needs the last module to be deployed. -->
+                <module>bom</module>
+            </modules>
+
             <build>
                 <plugins>
                     <plugin>
@@ -658,19 +683,12 @@
             </build>
         </profile>
         <profile>
-            <!--  Profile is triggered if apiDiff property is defined:
-                  this profile is disjoint with default profile.
-                  It allows to prevent running build for all available modules 
-                  but restricts a number of modules to specified here only
-                  (which allows to avoid long time compilation for projects 
-                  that are not needed since japicmp works with compiled classes).
-            !-->
+            <!-- This profile is disjoint with default profile. It allows 
+                to prevent running build for all available modules but restricts a number 
+                of modules to specified here only (which allows to avoid long time compilation 
+                for projects that are not needed since japicmp works with compiled classes). 
+                ! -->
             <id>apicmp</id>
-            <activation>
-                <property>
-                    <name>apiDiff</name>
-                </property>
-            </activation>
             <modules>
                 <module>server</module>
                 <module>push</module>
@@ -722,6 +740,8 @@
             </build>
         </profile>
         <profile>
+            <!-- Testing profile for measurement tests. Use along with default 
+                profile -->
             <id>measurements</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
