Include Vaadin-Icons into the project, make vaadin-icons dependency 'provided' Fixes #8471

--- a/pom.xml
+++ b/pom.xml
@@ -285,6 +285,7 @@
                 <groupId>com.vaadin</groupId>
                 <artifactId>vaadin-icons</artifactId>
                 <version>${vaadin.icons.version}</version>
+                <scope>provided</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
