--- a/uitest/pom.xml
+++ b/uitest/pom.xml
@@ -326,7 +326,8 @@
                         <categories.include>${categories.include}</categories.include>
                         <categories.exclude>${categories.exclude}</categories.exclude>
                         <useLocalWebDriver>${useLocalWebDriver}</useLocalWebDriver>
-                        <phantomjs.binary.path>${phantomjs.binary}</phantomjs.binary.path>
+                        <!-- PhantomJS binary downloaded by phantomjs-maven-plugin -->
+<!--                        <phantomjs.binary.path>${phantomjs.binary}</phantomjs.binary.path> -->
                     </systemPropertyVariables>
                     <includes>
                         <include>**/AllTB3Tests.java</include>
